@startuml
'https://plantuml.com/class-diagram

class StudyProgram {
    -int program_id;
    -String program_name;
    -String program_abbr;
    +Getter()
    +Setter()
}

class Course {
    -int course_id;
    -String course_name;
    -int course_number;
    -String lector;
    +Getter()
    +Setter()
}

class Test {
    -int countOfQuestions
    -int overallPoints
    -Question[] questions
    +Getter()
    +Setter()
}

class Question {
    -int question_id
    -Category category
    -int difficulty
    -float points
    -String questionString
    -int multipleChoice
    -String language
    -String remarks
    -String answers
    -ArrayList<Keyword> keywords
    -ArrayList<Image> images
    +Getter()
    +Setter()
}

class Category {
    -int category_id;
    -String category;
    +Getter()
    +Setter()
}

class Keyword {
    -int keyword_id;
    -String keyword_text;
    +Getter()
    +Setter()
}

class Image {
    -int image_id;
    -String link;
    -String imageName;
    -int position;
    +Getter()
    +Setter()
}

class SharedData {
    -Course selectedCourse
    -Course newCourse
    -StudyProgram selectedStudyProgram
    -StudyProgram newStudyProgram
    +Getter()
    +Setter()
}

class SearchObject {
    -String column_name;
    -String objectName;
    -T valueOfObject;
    -boolean isSet;
    +Getter()
    +Setter()
}

Test "1..*" o-- "1..*" Question : "has"
Test "1..*" o-- "1" SharedData : "belongs to"
StudyProgram "1..*" o-- "1..*" Course : "has"
Course "1..*" o-- "1..*" Question : "has"
Question "1..*" *-- "0..*" Image : has
Question "1..*" *-- "0..*" Keyword : has
Question "1..*" *-- "1" Category : has
Question "1..*" *-- "1..*" SearchObject : used to search for

@enduml